# gb4e

./: .gitignore  .gitmodules  CMakeLists.txt  download-test-roms.sh  imgui.ini
src/main/: Cartridge.cc  Cartridge.hh  Common.cc  Common.hh  GbCpu.cc  GbCpu.hh  GbCpuState.cc  GbCpuState.hh  GbGpuState.cc  GbGpuState.hh  GbJoypad.cc  GbJoypad.hh  GbRenderer.cc  GbRenderer.hh  InputSystem.cc  InputSystem.hh  Instruction.cc  Instruction.hh  InstructionAppliers.cc  InstructionAppliers.hh  InstructionResult.cc  InstructionResult.hh  MemoryHandlers.cc  MemoryHandlers.hh  MemoryState.cc  MemoryState.hh  Register.cc  Register.hh  Renderer.cc  Renderer.hh  SlurpFile.cc  SlurpFile.hh  main.cc
src/main/audio/: GbApuState.cc  GbApuState.hh
src/main/debug/: InstructionTrace.cc  InstructionTrace.hh
src/main/logging/: LogAppender.cc  LogAppender.hh  LogLevel.cc  LogMessage.hh  Logger.cc  Logger.hh  LoggerFactory.cc
src/main/logging/appenders/: CompositeAppender.cc  CompositeAppender.hh  StdoutLogAppender.cc  StdoutLogAppender.hh
src/main/romfile/: CartridgeType.cc  CartridgeType.hh  CgbFlag.cc  CgbFlag.hh  DestinationCode.cc  DestinationCode.hh  RamSize.cc  RamSize.hh  RomFile.cc  RomFile.hh  RomFileLoader.cc  RomFileLoader.hh  RomSize.cc  RomSize.hh  SgbFlag.cc  SgbFlag.hh
src/main/ui/: Console.cc  Console.hh  Debugger.cc  Debugger.hh  GpuDebugger.cc  GpuDebugger.hh  InstructionHistory.cc  InstructionHistory.hh  InstructionWatch.cc  InstructionWatch.hh  MemoryWatch.cc  MemoryWatch.hh  Metrics.cc  Metrics.hh  Navbar.cc  Navbar.hh  RegisterWatch.cc  RegisterWatch.hh  UiCommon.cc  UiCommon.hh
src/main/ui/imgui_backend/: imgui_impl_opengl3.cc  imgui_impl_opengl3.hh
src/test/: Common_test.hh  Cpu_test.hh  Gpu_test.hh  Instruction_test.hh  Test_ROMs.hh  test_main.cc
